# ast-aru

./: docker-compose.yml  package.json  pnpm-lock.yaml
apps/api-gateway/: Dockerfile  package.json  tsconfig.json
apps/api-gateway/src/: server.ts
apps/api-gateway/src/routes/: timing.ts
apps/api-gateway/tests/: timing.integration.test.ts
apps/astro-engine/: Dockerfile  main.py  pyproject.toml  requirements.txt  test_output.txt
apps/astro-engine/src/: main.py
apps/astro-engine/src/api/: routes.py  schemas.py
apps/astro-engine/src/core/: ephemeris.py  jyotish.py
apps/astro-engine/tests/: test_astro.py
apps/orchestrator/: pyproject.toml
apps/orchestrator/src/: graph.py  state.py
apps/orchestrator/src/nodes/: reasoning.py  telemetry.py
docs/architecture/: ADR-001-esoteric-wrappers.md  ADR-002-async-astronomy.md  unified-api-contract.md
docs/planning/: findings.md  progress.md  task_plan.md
